frontend/tiny_camiot/test/bad/badtest4.cam

data Maybe a where
  Just    : a -> Maybe a
  Nothing : Maybe a

f = \(Just a b) -> 3